fixing some layout issues

--- a/src/app/components/Card/Card.module.css
+++ b/src/app/components/Card/Card.module.css
@@ -41,6 +41,7 @@
 .card__am {
     font-size: 14px;
     font-style: normal;
+    margin-top: 5px;
     font-weight: 500;
     line-height: normal;
     letter-spacing: -0.41px;
